tests/baselines/reference/ComputedPropertyName15.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName15.ts(1,32): error TS1022: An index signature parameter must have a type annotation.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName15.ts (1 errors) ====
    var v: { [e: number]: string; [e]: number };
                                   ~
!!! error TS1022: An index signature parameter must have a type annotation.